--- a/CPP02/ex01/Makefile
+++ b/CPP02/ex01/Makefile
@@ -1,7 +1,7 @@
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-NAME = usefulFixedPoint
+NAME = fixedPoint
 
 SRCS = main.cpp Fixed.cpp
 OBJS = $(SRCS:.cpp=.o)
