--- a/CPP03/ex00/Makefile
+++ b/CPP03/ex00/Makefile
@@ -1,10 +1,9 @@
-NAME = phonebook
-
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRCDIR = .
-SRCS = main.cpp Contact.cpp PhoneBook.cpp
+NAME = ClapTrap
+
+SRCS = main.cpp ClapTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
@@ -12,7 +11,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
 
-%.o: %.cpp
+%.o: %.cpp ClapTrap.hpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
